; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-block_decoder.c_get_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-block_decoder.c_get_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test_fixture = type { i32 }
%struct.ptunit_result = type { i32 }
%struct.pt_config = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.test_fixture*)* @get_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_config(%struct.test_fixture* %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca %struct.test_fixture*, align 8
  %4 = alloca %struct.pt_config*, align 8
  store %struct.test_fixture* %0, %struct.test_fixture** %3, align 8
  %5 = load %struct.test_fixture*, %struct.test_fixture** %3, align 8
  %6 = getelementptr inbounds %struct.test_fixture, %struct.test_fixture* %5, i32 0, i32 0
  %7 = call %struct.pt_config* @pt_blk_get_config(i32* %6)
  store %struct.pt_config* %7, %struct.pt_config** %4, align 8
  %8 = load %struct.pt_config*, %struct.pt_config** %4, align 8
  %9 = call i32 @ptu_ptr(%struct.pt_config* %8)
  %10 = call i32 (...) @ptu_passed()
  %11 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  ret i32 %13
}

declare dso_local %struct.pt_config* @pt_blk_get_config(i32*) #1

declare dso_local i32 @ptu_ptr(%struct.pt_config*) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
